objects/CCMI__Milestone_Assignment2__c.object
<CustomObject>
    <description>Used for storing assignments to tasks in Cloud Coach Fundamentals (Formerly Cloud Coach Milestones)</description>
    <fields>
        <fullName>CCMI__Assignee_Name__c</fullName>
        <formula>IF(ISBLANK(CCMI__Contact__c), IF(ISBLANK(Owner:User.Id), Owner:Queue.QueueName, Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName), CCMI__Contact__r.FirstName &amp; &apos; &apos; &amp; CCMI__Contact__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The name of the assignee</inlineHelpText>
        <label>Assignee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMI__Assignee_Type__c</fullName>
        <formula>IF(ISBLANK(CCMI__Contact__c), IF(BEGINS(OwnerId,&apos;005&apos;), &apos;User&apos;, &apos;Queue&apos;), &apos;Contact&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The type of the assignee. Options are &quot;User&quot;, &quot;Queue&quot;, or &quot;Contact&quot;</inlineHelpText>
        <label>Assignee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMI__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Milestone Assignments</relationshipLabel>
        <relationshipName>Milestone_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMI__Milestone_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>CCMI__Milestone_Task__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Milestone_Assignments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Assignment</label>
    <nameField>
        <displayFormat>MTA{00000000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>